package client.enums;

public enum ColorEnum {
    BLACK, WHITE, EMPTY, EMPTY_WHITE, EMPTY_BLACK
}
