package client.enums;

public enum PlayerState {
    NO_ENEMY, PLAYING, PASSED, AGREEING;
}
